--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01091428"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01091428"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01091429"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01091429"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01091428"/>
+    <link rel="stylesheet" href="src/play.css?v=01091429"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01091428"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01091428"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01091428"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01091428"></script>
-    <script type="text/javascript" src="src/play.js?v=01091428"></script>
+    <script type="text/javascript" src="src/common.js?v=01091429"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01091429"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01091429"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01091429"></script>
+    <script type="text/javascript" src="src/play.js?v=01091429"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -174,11 +174,11 @@
                       <div id="ad"></div>
                       <div id="ad_explain"></div>
 
-                      <div id="ad_marker" data-bs-toggle="modal" data-bs-target="#exampleModal">Реклама 
+                      <button id="ad_marker" data-bs-toggle="modal" data-bs-target="#exampleModal">Реклама 
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
                           <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
                         </svg>
-                      </div>
+                      </button>
 
                       <!-- Modal -->
                       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
