--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01092215"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01092215"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01092216"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01092216"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01092215"/>
+    <link rel="stylesheet" href="src/play.css?v=01092216"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01092215"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01092215"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01092215"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01092215"></script>
-    <script type="text/javascript" src="src/play.js?v=01092215"></script>
+    <script type="text/javascript" src="src/common.js?v=01092216"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01092216"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01092216"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01092216"></script>
+    <script type="text/javascript" src="src/play.js?v=01092216"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -183,24 +183,6 @@
                         </svg>
                       </button>
 
-                      <!-- Modal -->
-                      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered- modal-dialog-scrollable">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalLabel">Сведения о рекламодателе</h1>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                            </div>
-                            <div class="modal-body" style="height: 100vh;">
-                              ...
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
                     </div>
                   </div>
 
@@ -287,5 +269,22 @@
       </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered- modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Сведения о рекламодателе</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+          </div>
+          <div class="modal-body" style="height: 100vh;">
+            ...
+          </div>
+          <!--div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+          </div-->
+        </div>
+      </div>
+    </div>
   </body>
 </html>
